<resources>
    <string name="app_name">Calculator</string>
    <string name="result">result</string>
    <string name="calc">calc</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">AC</string>
    <string name="delete">⌫</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="change">⟳</string>

    <string name="secondRow">2nd</string>
    <string name="deg_rad">deg</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x_hoch_y">x^y</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="open_brace">(</string>
    <string name="close_brace">)</string>
    <string name="root">√</string>
    <string name="faculty">X!</string>
    <string name="one_durch_x">1/X</string>
    <string name="pi">ℼ</string>
    <string name="e">e</string>

</resources>